--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,1 +1,82 @@
+* {
+  box-sizing: border-box; }
 
+.dapper-body {
+  margin: 0; }
+
+.flex--inline {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex; }
+
+.flex--row-reverse {
+  -webkit-flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse; }
+
+.flex--column {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.flex--column-reverse {
+  -webkit-flex-direction: column-reverse;
+  -ms-flex-direction: column-reverse;
+  flex-direction: column-reverse; }
+
+.cell {
+  margin: 1em;
+  padding: 1em;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  list-style: none;
+  font-size: 1em; }
+
+a:link {
+  text-decoration: none; }
+
+.flex-nav {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.flex-nav__parent {
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background-color: #ff5442;
+  position: fixed;
+  top: 0;
+  width: 100%; }
+
+.nav {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #ff5442;
+  height: 60px;
+  margin: 0;
+  padding: 1em 0 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
+
+.nav__logo {
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  font-size: 1.3em;
+  margin: 0 .6em 0 1.5em;
+  background-color: #323a45; }
+
+.nav__menu {
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  list-style-type: none;
+  background-color: #323a45; }
+
+.header-main {
+  background-color: #ff5442; }
