--- a/style/scss/partials/_colors.scss
+++ b/style/scss/partials/_colors.scss
@@ -1,5 +1,5 @@
 ////////////////////////////////////////////////////////////////////////////////
-// COLORS                                                                     //
+// COLOR PALLETES                                                             //
 ////////////////////////////////////////////////////////////////////////////////
 
 	$blue-grey:				#626a75;			// Light Blue-Grey
