--- a/style/scss/import.scss
+++ b/style/scss/import.scss
@@ -1,1 +1,5 @@
-@import 'partials/colors.scss';
+@import 'partials/colors';
+@import 'partials/base';
+@import 'partials/flex';
+@import 'partials/nav';
+@import 'partials/header';
