basic nav styling done

--- a/style/scss/partials/_base.scss
+++ b/style/scss/partials/_base.scss
@@ -3,6 +3,10 @@
 ////////////////////////////////////////////////////////////////////////////////
 * { box-sizing: border-box }
 
-.dapper-body {
+body {
 	margin: 0;
+}
+
+a:link {
+	text-decoration: none;
 }
