--- a/style/scss/partials/_header.scss
+++ b/style/scss/partials/_header.scss
@@ -3,5 +3,21 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 .header-main {
+	padding: 					4rem 0 0;
 	background-color:			$vermilion;
+}
+
+.page-heading {
+	margin: 					2rem 2rem 0 2rem;
+	color:						$white;
+	font-size:					7.5vw;
+	font-weight:				700;
+}
+
+.page-subhead {
+	margin: 					1rem 2rem 0;
+	color:						$white;
+	font-size:					2rem;
+	font-weight: 				400;
+
 }
