--- a/style/scss/partials/_header.scss
+++ b/style/scss/partials/_header.scss
@@ -17,7 +17,7 @@
 .page-subhead {
 	margin: 					1rem 2rem 0;
 	color:						$white;
-	font-size:					2rem;
+	font-size:					1.9vw;
 	font-weight: 				400;
 
 }
