--- a/style/scss/partials/_nav.scss
+++ b/style/scss/partials/_nav.scss
@@ -7,7 +7,7 @@
 
 .flex-nav__parent {
   justify-content:  space-between;
-  background-color: $vermilion;
+  background-color: $parisian-blue;
   position:         fixed;
   top:              0;
   width:            100%;
