--- a/style/css/style.css
+++ b/style/css/style.css
@@ -18,7 +18,7 @@ a:link {
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  background-color: #ff5442;
+  background-color: #323a45;
   position: fixed;
   top: 0;
   width: 100%; }
@@ -45,5 +45,5 @@ a:link {
 .page-subhead {
   margin: 1rem 2rem 0;
   color: #FFFFFF;
-  font-size: 2rem;
+  font-size: 1.9vw;
   font-weight: 400; }
