--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -15,18 +15,23 @@ a:link {
 .flex-nav__parent {
   justify-content: space-between;
   background-color: #323a45;
+  align-items: center;
   position: fixed;
   top: 0;
   width: 100%; }
 
+.flex-nav__logo {
+  height: 38px; }
+
 .cell {
-  margin: 1em;
+  margin: .25em;
   padding: 1em;
   color: #FFFFFF;
   text-transform: uppercase;
   text-decoration: none;
   list-style: none;
-  font-size: 1em; }
+  font-size: 1em;
+  align-self: center; }
 
 .header-main {
   padding: 4rem 0 0;
