Section containers break with margin and padding
It might not be possible to do this this way, I'll try flexboxes next.

--- a/style/css/fill.css
+++ b/style/css/fill.css
@@ -1,4 +1,4 @@
-* { box-sizing: border-box }
+
 
 body {
 	margin: 0;
@@ -7,6 +7,11 @@ body {
 section {
 	background-color:	#323a45;
 	color:	#fff;
+	padding: 2em;
+}
+
+.inner {
+	background-color:	#626a75;
 }
 
 @media all and (orientation: portrait) {
