--- a/style/css/fill.css
+++ b/style/css/fill.css
@@ -1,28 +1,26 @@
-
-
 body {
+	background-color: #323a45;
+	font-size: 5vmax;
 	margin: 0;
 }
 
 section {
-	background-color:	#323a45;
-	color:	#fff;
-	padding: 2em;
-}
-
-.inner {
-	background-color:	#626a75;
+	background-color:	#ff5442;
+	color:	#ede5e2;
+	text-align: center;
 }
 
 @media all and (orientation: portrait) {
 	section {
-		height: 100vmax;	
+		height: 90vmax;	
+		width: 90vmin;
 	}
 }
 
 @media all and (orientation: landscape) {
 	section {
-		height: 100vmin;	
+		height: 90vmin;	
+		width: 90vmax;
 	}
 }
 
