--- a/current-site/style/type/fontello.css
+++ b/current-site/style/type/fontello.css
@@ -2,16 +2,7 @@
 
 @font-face {
   font-family: 'fontello';
-  src: url("fontello/fontello.eot");
-  src: url("fontello/fontello.eot?#iefix") format('embedded-opentype'), url("fontello/fontello.woff") format('woff'), url("fontello/fontello.ttf") format('truetype'), url("fontello/fontello.svg#fontello") format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'fontello-social';
-  src: url("fontello/fontello-social.eot");
-  src: url("fontello/fontello-social.eot?#iefix") format('embedded-opentype'), url("fontello/fontello-social.woff") format('woff'), url("fontello/fontello-social.ttf") format('truetype'), url("fontello/fontello-social.svg#fontello") format('svg');
+  src: url("fontello/fontello.eot?#iefix") format('embedded-opentype'), url("fontello/fontello.ttf") format('truetype');
   font-weight: normal;
   font-style: normal;
 }
