Removed testing svgs

--- a/style/scss/import.scss
+++ b/style/scss/import.scss
@@ -2,4 +2,5 @@
 @import 'partials/colors';
 @import 'partials/base';
 @import 'partials/flex';
+@import 'partials/animate';
 @import 'partials/media-queries';
