--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -32,6 +32,8 @@
 
 .alignself-end      { align-self:      flex-end; }
 
+.rotate90 { transform: rotate(90deg); }
+
 ////////////////////////////////////////////////////////////////////////////////
 // PADDING                                                                    //
 ////////////////////////////////////////////////////////////////////////////////
@@ -79,5 +81,4 @@
 .svg {
   @extend .alignself-end;
 }
-
 
