padding changes and word changes

--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -50,8 +50,10 @@
 .pad10 { padding:  1rem; }
 .pad20 { padding:  2rem; }
 
-.pad20--top     { padding-top:    2rem; } // padding top
-.pad20--bottom  { padding-bottom: 2rem; } // padding bottom
+.pad20--top		{ padding-top:		2rem; } // padding top
+.pad20--bottom	{ padding-bottom:	2rem; } // padding bottom
+.pad20--right	{ padding-right:    2rem; } // padding top
+.pad20--left	{ padding-left: 	2rem; } // padding bottom
 
 .margin3 { margin: .5rem; }
 
