--- a/style/scss/partials/_base.scss
+++ b/style/scss/partials/_base.scss
@@ -24,9 +24,13 @@ a:link { text-decoration: none; } // Removes underline from hyperlinks
 }
 
 .h1-main {
-	font-size: 14.2vh;
+	font-size: 14vh;
 	text-transform: uppercase;
 	text-align: center;
+}
+
+.h1-embiggen {
+	font-size: 24vh;
 }
 
 .animate {
