--- a/style/scss/partials/_base.scss
+++ b/style/scss/partials/_base.scss
@@ -15,11 +15,11 @@ body {
 
 a:link { text-decoration: none; } // Removes underline from hyperlinks
 
-.vollkorn {
-	font-family: 'Vollkorn', serif; // Choices typeface
+.choice-font {
+	font-family: 'Lato', sans-serif; // Choices typeface
 }
 
-.unica-one {
+.chat-font {
 	font-family: 'Unica One', cursive; // h1 typeface
 }
 
