--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5841,10 +5841,10 @@ body {
 a:link {
   text-decoration: none; }
 
-.vollkorn {
-  font-family: 'Vollkorn', serif; }
+.choice-font {
+  font-family: 'Lato', sans-serif; }
 
-.unica-one {
+.chat-font {
   font-family: 'Unica One', cursive; }
 
 .h1-main {
@@ -5876,6 +5876,14 @@ a:link {
 .flex3 {
   display: flex;
   flex: 3; }
+
+.flex4 {
+  display: flex;
+  flex: 4; }
+
+.flex5 {
+  display: flex;
+  flex: 5; }
 
 .horizontal-center {
   justify-content: center; }
@@ -5930,6 +5938,9 @@ a:link {
 
 .pad20 {
   padding: 2rem; }
+
+.pad10--top {
+  padding-top: 1rem; }
 
 .pad20--top {
   padding-top: 2rem; }
