--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -53,12 +53,14 @@
 .pad20 { padding:  2rem; }
 
 .pad10--top		{ padding-top:		1rem; } // padding top
-.pad20--top		{ padding-top:		2rem; } // padding top
+.pad20--top		{ padding-top:		2rem; } // padding 
+.pad10--bottom	{ padding-bottom:	1rem; } // padding bottom
 .pad20--bottom	{ padding-bottom:	2rem; } // padding bottom
 .pad20--right	{ padding-right:    2rem; } // padding top
 .pad20--left	{ padding-left: 	2rem; } // padding bottom
 
 .margin3 { margin: .5rem; }
+.margin10-bottom { margin: 0 0 1rem; }
 
 ////////////////////////////////////////////////////////////////////////////////
 // SHADOWS                                                                    //
@@ -74,10 +76,14 @@
 .border-radius5  { border-radius: .5rem; }
 .border-radius10 { border-radius:  1rem; } // border relative to root (14px)
 
-.border-topleft-radius5     { border-top-left-radius:     .5rem; }
-.border-topright-radius5    { border-top-right-radius:    .5rem; }
-.border-bottomleft-radius5  { border-bottom-left-radius:  .5rem; }
-.border-bottomright-radius5 { border-bottom-right-radius: .5rem; }
+.border-topleft-radius5     	{ border-top-left-radius:     .5rem; }
+.border-topright-radius5    	{ border-top-right-radius:    .5rem; }
+.border-bottomleft-radius5  	{ border-bottom-left-radius:  .5rem; }
+.border-bottomright-radius5 	{ border-bottom-right-radius: .5rem; }
+.border-topleft-radius10     	{ border-top-left-radius:      1rem; }
+.border-topright-radius10    	{ border-top-right-radius:     1rem; }
+.border-bottomleft-radius10  	{ border-bottom-left-radius:   1rem; }
+.border-bottomright-radius10 	{ border-bottom-right-radius:  1rem; }
 
 ////////////////////////////////////////////////////////////////////////////////
 // SVG                                                                        //
