--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5945,6 +5945,9 @@ a:link {
 .pad20--top {
   padding-top: 2rem; }
 
+.pad10--bottom {
+  padding-bottom: 1rem; }
+
 .pad20--bottom {
   padding-bottom: 2rem; }
 
@@ -5956,6 +5959,9 @@ a:link {
 
 .margin3 {
   margin: .5rem; }
+
+.margin10-bottom {
+  margin: 0 0 1rem; }
 
 .shadow {
   box-shadow: 0 0.2rem 0.1rem 0.1rem #4d4d4d; }
@@ -5977,6 +5983,18 @@ a:link {
 
 .border-bottomright-radius5 {
   border-bottom-right-radius: .5rem; }
+
+.border-topleft-radius10 {
+  border-top-left-radius: 1rem; }
+
+.border-topright-radius10 {
+  border-top-right-radius: 1rem; }
+
+.border-bottomleft-radius10 {
+  border-bottom-left-radius: 1rem; }
+
+.border-bottomright-radius10 {
+  border-bottom-right-radius: 1rem; }
 
 .svg-absolute {
   width: 200px; }
