--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5865,6 +5865,9 @@ a:link {
 .overflow-hidden {
   overflow: hidden; }
 
+.z10 {
+  z-index: 10; }
+
 .flex1 {
   display: flex;
   flex: 1; }
@@ -5884,6 +5887,26 @@ a:link {
 .flex5 {
   display: flex;
   flex: 5; }
+
+.flex6 {
+  display: flex;
+  flex: 6; }
+
+.flex7 {
+  display: flex;
+  flex: 7; }
+
+.flex8 {
+  display: flex;
+  flex: 8; }
+
+.flex9 {
+  display: flex;
+  flex: 9; }
+
+.flex10 {
+  display: flex;
+  flex: 10; }
 
 .horizontal-center {
   justify-content: center; }
