--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5869,6 +5869,9 @@ a:link {
 .overflow-hidden {
   overflow: hidden; }
 
+.z10 {
+  z-index: 10; }
+
 .flex1 {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -5908,6 +5911,46 @@ a:link {
   -webkit-flex: 5;
   -ms-flex: 5;
   flex: 5; }
+
+.flex6 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 6;
+  -ms-flex: 6;
+  flex: 6; }
+
+.flex7 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 7;
+  -ms-flex: 7;
+  flex: 7; }
+
+.flex8 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 8;
+  -ms-flex: 8;
+  flex: 8; }
+
+.flex9 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 9;
+  -ms-flex: 9;
+  flex: 9; }
+
+.flex10 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 10;
+  -ms-flex: 10;
+  flex: 10; }
 
 .horizontal-center {
   -webkit-justify-content: center;
