--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5855,19 +5855,6 @@ a:link {
 .h1-embiggen {
   font-size: 24vh; }
 
-.shell {
-  height: 100%;
-  display: flex; }
-
-.column {
-  flex-direction: column; }
-
-.overflow-hidden {
-  overflow: hidden; }
-
-.z10 {
-  z-index: 10; }
-
 .flex1 {
   display: flex;
   flex: 1; }
@@ -5907,6 +5894,30 @@ a:link {
 .flex10 {
   display: flex;
   flex: 10; }
+
+.frame-brown {
+  background-color: #2a2922;
+  display: flex;
+  height: 100%;
+  padding: 1rem; }
+
+.frame-blue {
+  background-color: #52637a;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 0 0 #14191f;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 1rem; }
+
+.column {
+  flex-direction: column; }
+
+.overflow-hidden {
+  overflow: hidden; }
+
+.z10 {
+  z-index: 10; }
 
 .horizontal-center {
   justify-content: center; }
