mixins for flex in new partial

--- a/style/scss/import.scss
+++ b/style/scss/import.scss
@@ -1,5 +1,6 @@
 @import 'partials/lightness';		// Values for pre-color phase, not production
 @import 'partials/colors';
+@import 'partials/mixins';
 @import 'partials/color-generator';
 @import 'partials/base';
 @import 'partials/flex';
