--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5958,6 +5958,17 @@ a:link {
   flex: 1;
   padding: 1rem; }
 
+.app-container {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
 .column {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
