svg partial for styling

--- a/style/scss/import.scss
+++ b/style/scss/import.scss
@@ -4,4 +4,5 @@
 @import 'partials/color-generator';
 @import 'partials/base';
 @import 'partials/flex';
+@import 'partials/svg';
 @import 'partials/media-queries';
