--- a/style/scss/partials/_colors.scss
+++ b/style/scss/partials/_colors.scss
@@ -41,5 +41,6 @@ $blue20: hsl($blue-hue, $blue-sat, 20);
 $blue30: hsl($blue-hue, $blue-sat, 30);
 $blue35: hsl($blue-hue, $blue-sat, 35);
 $blue40: hsl($blue-hue, $blue-sat, 40);
+$blue50: hsl($blue-hue, $blue-sat, 50);
 $blue60: hsl($blue-hue, $blue-sat, 60);
 $blue85: hsl($blue-hue, $blue-sat, 85);
