--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5863,7 +5863,7 @@ a:link {
   height: 100%;
   padding: 1rem; }
 
-.box__blue {
+.box__1--blue50 {
   background-color: #667b99;
   border-radius: 1rem;
   box-shadow: 0 0.5rem 0 0 #14191f;
@@ -5878,7 +5878,7 @@ a:link {
   flex: 1;
   padding: 1rem; }
 
-.dapper-container {
+.box__1--column {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5900,6 +5900,18 @@ a:link {
   -ms-flex: 2;
   flex: 2;
   margin-bottom: 1rem; }
+
+.choices {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-color: #3d4a5c;
+  border-radius: .5rem;
+  box-shadow: inset 0 0.5rem 0 0 #29313d;
+  padding: 1rem; }
 
 .flex1 {
   display: -webkit-flex;
@@ -6126,7 +6138,7 @@ a:link {
   .choice-fontsize {
     font-size: 3vmin; }
 
-  .choice-orientation {
+  .choices {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column; }
