--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -1,34 +1,39 @@
 .box {
-	background-color:	$brown15;	// Dark Brown (15 brightness)
+	background-color:	$brown15;	// dark brown (15 brightness)
 	display:			flex;		// flexbox parent. all grown up and in charge.
 	height:				100%;		// makes for no scrolling
 	padding:			1rem;		// 14px
 }
 
-.box__blue {
-	background-color:	$blue50;	// Background Blue
-	border-radius:  	1rem;		// Rounded corners
+.box__1--blue50 {
+	background-color:	$blue50;	// background Blue
+	border-radius:  	1rem;		// rounded corners
 	box-shadow:			0 .5rem 0 0 $blue10;	// vertical, no blur, dark blue
 	flex-direction: 	column;		// flexbox stacks vertically in a column
-	@include 			flex1;		// flex grow and shrink 1
+	@include 			flex1;		// container fills all space
 	padding:			1rem;		// sets the size of the frame
 }
 
-.dapper-container {
-	@include		flex1;	// flex grow and shrink 1
+.box__1--column {
+	@include		flex1;	// container fills all space
 	flex-direction:	column;	// vertical stack of scene then choices
 }
 
 .scene {
-	background-color:	$blue30;	// Background a bit darker due to being inset
-	border-radius:  	.5rem;		// Smaller corners for inner containers, .5 instead of 1
-	box-shadow:			inset 0 0.5rem 0 0 $blue20;	// Dark blue inner (inset) drop shadow
+	background-color:	$blue30;	// background a bit darker due to being inset
+	border-radius:  	.5rem;		// smaller corners for inner containers, .5 instead of 1
+	box-shadow:			inset 0 0.5rem 0 0 $blue20;	// dark blue inner (inset) drop shadow
 	@include			flex2;		// 2/3 of the vertical
-	margin-bottom:		1rem;		// Bottom margin set to keep from touching choices
+	margin-bottom:		1rem;		// bottom margin set to keep from touching choices
 }
 
 .choices {
-
+	@include	flex1;	// container fills all space
+	background-color: $blue30;
+	border-radius:  	.5rem;		// smaller corners for inner containers, .5 instead of 1
+	box-shadow:			inset 0 0.5rem 0 0 $blue20;	// dark blue inner (inset) drop shadow
+	padding:				1rem;	// sets the size of the frame
+	// _meda-queries.scss orientation changes this to column
 }
 
 ////////////////////////////////////////////////////////////////////////////////
