--- a/style/scss/partials/_mixins.scss
+++ b/style/scss/partials/_mixins.scss
@@ -7,3 +7,8 @@
 	display:	flex;	// so strong
 	flex:		2;		// relative unit of 1
 }
+
+@mixin flex4 {
+	display:	flex;	// so strong
+	flex:		4;		// relative unit of 1
+}
