selector and chat cloud

--- a/style/scss/partials/_colors.scss
+++ b/style/scss/partials/_colors.scss
@@ -43,4 +43,5 @@ $blue35: hsl($blue-hue, $blue-sat, 35);
 $blue40: hsl($blue-hue, $blue-sat, 40);
 $blue50: hsl($blue-hue, $blue-sat, 50);
 $blue60: hsl($blue-hue, $blue-sat, 60);
+$blue70: hsl($blue-hue, $blue-sat, 70);
 $blue85: hsl($blue-hue, $blue-sat, 85);
