--- a/style/scss/partials/_media-queries.scss
+++ b/style/scss/partials/_media-queries.scss
@@ -13,8 +13,8 @@
 	font-size:	5vw;
 }
 
-	.hide {
-		display: none; // HIDES SELECTOR ON PORTRAIT
+	.bioware-style-conversation-wheel {
+		display: none; // hides conversation wheel when the screen is taller vertically than horizontally
 	}
 }
 
