--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5909,6 +5909,15 @@ a:link {
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   margin-bottom: 1rem; }
 
+.chat-cloud {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+  padding: 2rem 0 1rem; }
+
 .choices {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -5939,8 +5948,16 @@ a:link {
   -ms-flex-align: center;
   align-items: center;
   font-family: 'Lato', sans-serif;
-  color: #d1d7e0;
+  color: #a3b0c2;
   font-size: 3vw; }
+
+.bioware-style-conversation-wheel {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
 
 .choices__button:hover {
   background-color: #47566b;
@@ -6176,7 +6193,7 @@ a:link {
   .choices__button {
     font-size: 5vw; }
 
-  .hide {
+  .bioware-style-conversation-wheel {
     display: none; } }
 @media all and (orientation: landscape) {
   .h1-main {
