--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5885,6 +5885,11 @@ a:link {
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   margin-bottom: 1rem; }
 
+.chat-cloud {
+  display: flex;
+  flex: 2;
+  padding: 2rem 0 1rem; }
+
 .choices {
   display: flex;
   flex: 1;
@@ -5903,8 +5908,12 @@ a:link {
   justify-content: center;
   align-items: center;
   font-family: 'Lato', sans-serif;
-  color: #d1d7e0;
+  color: #a3b0c2;
   font-size: 3vw; }
+
+.bioware-style-conversation-wheel {
+  display: flex;
+  flex: 1; }
 
 .choices__button:hover {
   background-color: #47566b;
@@ -6083,7 +6092,7 @@ a:link {
   .choices__button {
     font-size: 5vw; }
 
-  .hide {
+  .bioware-style-conversation-wheel {
     display: none; } }
 @media all and (orientation: landscape) {
   .h1-main {
