--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5841,13 +5841,18 @@ body {
 a:link {
   text-decoration: none; }
 
-.chat-font {
-  font-family: 'Unica One', cursive; }
-
-.h1-main {
+h1 {
+  font-family: 'Unica One', cursive;
   font-size: 14vh;
   text-transform: uppercase;
-  text-align: center; }
+  text-align: center;
+  color: #464439; }
+
+h2 {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-size: 3vw; }
 
 .h1-embiggen {
   font-size: 24vh; }
@@ -5908,8 +5913,7 @@ a:link {
   justify-content: center;
   align-items: center;
   font-family: 'Lato', sans-serif;
-  color: #a3b0c2;
-  font-size: 3vw; }
+  color: #a3b0c2; }
 
 .bioware-style-conversation-wheel {
   display: flex;
@@ -6089,7 +6093,7 @@ a:link {
   .choices {
     flex-direction: column; }
 
-  .choices__button {
+  h2 {
     font-size: 5vw; }
 
   .bioware-style-conversation-wheel {
